# ono

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  package.json
.idx/: dev.nix
src/: main.rs
src/domain/ecs/: mod.rs
