[package]
name = "ono"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"